[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.027451, 0.196078, 0.411765, 1 )

[node name="Tittle" type="RichTextLabel" parent="ColorRect"]
margin_left = 486.0
margin_top = 31.0
margin_right = 601.0
margin_bottom = 71.0
rect_scale = Vector2( 5, 5 )
text = "Settings"

[node name="Sound Text" type="RichTextLabel" parent="ColorRect"]
margin_left = 95.0
margin_top = 166.0
margin_right = 204.0
margin_bottom = 206.0
rect_scale = Vector2( 3, 3 )
text = "Sound Effects
"

[node name="SoundSlider" type="HSlider" parent="ColorRect"]
margin_left = 385.0
margin_top = 180.0
margin_right = 869.0
margin_bottom = 196.0
min_value = -30.0
max_value = 10.0

[node name="Music Text" type="RichTextLabel" parent="ColorRect"]
margin_left = 95.0
margin_top = 296.0
margin_right = 225.0
margin_bottom = 336.0
rect_scale = Vector2( 3, 3 )
text = "Music Volume
"

[node name="MusicSilder" type="HSlider" parent="ColorRect"]
margin_left = 385.0
margin_top = 266.0
margin_right = 868.0
margin_bottom = 374.0
min_value = -30.0
max_value = 10.0

[node name="Button" type="Button" parent="ColorRect"]
margin_left = 500.0
margin_top = 581.0
margin_right = 769.0
margin_bottom = 673.0
custom_colors/font_color = Color( 1, 0.898039, 0, 1 )
text = "Return"

[node name="Mute" type="CheckBox" parent="ColorRect"]
margin_left = 397.0
margin_top = 387.0
margin_right = 586.0
margin_bottom = 445.0
rect_scale = Vector2( 3, 3 )
text = "Disable Sound"

[connection signal="value_changed" from="ColorRect/SoundSlider" to="." method="_on_Sound_Slider_value_changed"]
[connection signal="value_changed" from="ColorRect/MusicSilder" to="." method="_on_Music_Silder_value_changed"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/Mute" to="." method="_on_CheckBox_pressed"]
